--- a/package.json
+++ b/package.json
@@ -12,10 +12,4 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.0",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
-}
+    "ejs":
