--- a/package.json
+++ b/package.json
@@ -12,4 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.0",
-    "ejs":
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
+}
